Fix issue of quote and image misalignment in small screens

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -122,6 +122,9 @@ hr {
 }
 
 .about {
+  background-image: url("about_background.jpg");
+  background-size: cover;
+  background-position: center;  
   font-family: Corbel, "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", "DejaVu Sans", "Bitstream Vera Sans", "Liberation Sans", Verdana, "Verdana Ref", sans-serif;
 }
 
